# astro-up-manifests

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  Cargo.toml  minisign.pub  release-plz.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  dependabot-auto-merge.yml  pipeline.yml
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json
.specify/memory/: constitution.md
crates/checker/: CHANGELOG.md  Cargo.toml
crates/checker/src/: hash.rs  issue.rs  lib.rs  main.rs  rate_limit.rs  retry_client.rs  version_writer.rs
crates/checker/src/providers/: browser_scrape.rs  direct_url.rs  download_resolver.rs  github.rs  gitlab.rs  html_scrape.rs  http_head.rs  manual.rs  mod.rs  pe_download.rs  redirect.rs  sharpcap_url.rs
crates/checker/tests/: github_provider.rs  template_e2e.rs  version_format.rs  version_writer.rs
crates/compiler/: CHANGELOG.md  Cargo.toml
crates/compiler/src/: compile.rs  lib.rs  main.rs  manifest.rs  schema.rs  version_file.rs
crates/compiler/tests/: compile.rs  manifest_loading.rs  validation_mode.rs
crates/shared/: CHANGELOG.md  Cargo.toml
crates/shared/src/: lib.rs  manifest.rs  state.rs  template.rs  validate.rs  version.rs  version_file.rs
crates/shared/tests/: manifest_parse.rs  template_substitution.rs
manifests/: apt-app.toml  ascom-platform.toml  ascom-remote-app.toml  astap-app.toml  astap-d20.toml  astap-d50.toml  astap-d80.toml  astap-g05.toml  astap-w08.toml  astroasis-focuser-ascom.toml  astroasis-focuser-firmware.toml  astroasis-focuser-triple-ascom.toml  astroasis-fw-ascom.toml  astroasis-fw-firmware.toml  atik-core-software.toml  celestron-cfm.toml  celestron-cpwi.toml  celestron-focuser-usb-ascom.toml  cp210x-drivers.toml  dotnet-desktop-8.toml  eqmod-app.toml  firecapture-app.toml  green-swamp-server-app.toml  ioptron-cem120-firmware.toml  ioptron-cem26-firmware.toml  ioptron-cem40-firmware.toml  ioptron-cem70-firmware.toml  ioptron-commander-ascom.toml  ioptron-hae-bc-firmware.toml  ioptron-hae-firmware.toml  ioptron-haz-firmware.toml  ioptron-hem-firmware.toml  ioptron-ipolar.toml  ioptron-upgrade-utility-v2.toml  ioptron-upgrade-utility-v3-21.toml  ioptron-upgrade-utility-v3.toml  losmandy-gemini-firmware.toml  lunatico-cloudwatcher-ascom.toml  lunatico-cloudwatcher-firmware.toml  lunatico-cloudwatcher-software.toml  (+58 more)
scripts/: convert-manifests.py
specs/001-manifest-pipeline/: data-model.md  plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/001-manifest-pipeline/checklists/: pipeline.md  requirements.md
specs/001-manifest-pipeline/contracts/: cli.md
