[workspace]
resolver = "2"
members = ["crates/compiler", "crates/checker"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/astro-up-manifests"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minisign-verify = "0.2"
globset = "0.4"
walkdir = "2"
