[workspace]
resolver = "2"
members = ["crates/shared", "crates/compiler", "crates/checker"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/astro-up-manifests"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.26"
sha2 = "0.11"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minisign-verify = "0.2"
globset = "0.4"
walkdir = "2"
regex = "1"
futures = "0.3"
pelite = "0.10"
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
chromiumoxide = { version = "0.8", features = ["tokio"] }
lenient_semver = "0.4"
base64 = "0.22"
tempfile = "3"
url = "2"
rand = "0.9"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Restriction lints for CLI tool hygiene
unwrap_used = "warn"
expect_used = "warn"
panic_in_result_fn = "warn"
unwrap_in_result = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
missing_assert_message = "warn"
# Allow specific lints that conflict with the codebase style or are unfixable
module_name_repetitions = "allow"
wildcard_imports = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# Nursery lints that produce false positives or are overly aggressive
significant_drop_tightening = "allow"
option_if_let_else = "allow"
