[package]
name = "astro-up-checker"
version = "0.1.0"
description = "Checks for new versions of astrophotography software"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astro-up-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
scraper.workspace = true
chromiumoxide.workspace = true
goblin.workspace = true
sha2.workspace = true
semver.workspace = true
chrono.workspace = true
regex.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
